apps/samples/kuma-demo/demo-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-v2
  namespace: kuma-demo
spec:
  selector:
    matchLabels:
      app: demo-app
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-app
        kuma.io/sidecar-injection: enabled
        version: v2
    spec:
      containers:
        - name: demo-app
          image: docker.io/kumahq/kuma-demo:latest
          ports:
            - name: http
              containerPort: 5000
